# a2a-agent-mcpserver-generator

./: .gitignore  README-zh.md  README.md  pyproject.toml
src/a2a_agent_mcpserver_generator/: __init__.py  app.py  config_generator.py  dockerfile_generator.py  server_generator.py  types.py  utils.py
