[project]
name = "a2a-agent-mcpserver-generator"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vincent-pli", email = "justdoit.pli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk",
    "asyncclick>=8.1.8",
    "mcp[cli]>=1.8.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
]

[project.scripts]
a2a-agent-mcpserver-generator = "a2a_agent_mcpserver_generator.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a2a-sdk = { git = "https://github.com/google/a2a-python" }


